--- a/docs/Makefile
+++ b/docs/Makefile
@@ -96,9 +96,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Belot.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Jukebox.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Belot.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Jukebox.qhc"
 
 .PHONY: applehelp
 applehelp:
@@ -115,8 +115,8 @@ devhelp:
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/Belot"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Belot"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/Jukebox"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Jukebox"
 	@echo "# devhelp"
 
 .PHONY: epub
